--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -1,7 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Navbar from "../components/Header.astro";
 import Header from "../components/Header.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Island small mammals and inclusive biodiversity software">
@@ -13,9 +12,7 @@ import Header from "../components/Header.astro";
         >island systems</strong
       >
       and develop <strong>cross-platform, mobile-friendly software</strong>
-      to enhance the efficiency, integration, and <strong
-        >inclusivity of biodiversity research</strong
-      >.
+      to enhance the efficiency, integration, and inclusivity of biodiversity research.
     </p>
   </main>
 </Layout>
@@ -55,10 +52,10 @@ import Header from "../components/Header.astro";
   }
   .instructions {
     margin-bottom: 2rem;
-    border: 1px solid rgba(var(--accent-light), 10%);
+    border: 1px solid rgba(var(--accent-light), 25%);
     background: linear-gradient(
-      rgba(173, 216, 230, 0.66),
-      rgba(173, 216, 230, 0.33)
+      rgba(var(--accent-dark), 66%),
+      rgba(var(--accent-dark), 33%)
     );
     padding: 1.5rem;
     border-radius: 8px;
