--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,16 +7,52 @@ import Header from "../components/Header.astro";
 <Layout title="Island small mammals and inclusive biodiversity software">
   <Header />
   <main>
-    <h1>Hi, I am <span class="text-gradient">Heru</span></h1>
-    <p class="instructions">
-      I study <strong>speciation</strong> in complex <strong
-        >island systems</strong
+    <div class="relative isolate px-6 pt-14 lg:px-8">
+      <div
+        class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
+        aria-hidden="true"
       >
-      and develop <strong>cross-platform, mobile-friendly software</strong>
-      to enhance the efficiency, integration, and <strong
-        >inclusivity of biodiversity research</strong
-      >.
-    </p>
+        <div
+          class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
+          style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"
+        >
+        </div>
+      </div>
+      <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+        <div class="text-center">
+          <h1
+            class="text-balance text-5xl font-semibold tracking-tight text-gray-900 sm:text-7xl"
+          >
+            Hi,
+          </h1>
+          <h2
+            class="text-balance text-2xl font-semibold text-gray-900 sm:text-7xl"
+          >
+            I'm Heru Handika
+          </h2>
+          <p
+            class="mt-8 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8"
+          >
+            I study <strong>island speciation</strong> in <strong
+              >small mammals</strong
+            > and develop <strong>cross-platform, user-friendly software</strong
+            >
+            to improve <strong>biodiversity research</strong>.
+          </p>
+          <div class="mt-10 flex items-center justify-center gap-x-6"></div>
+        </div>
+      </div>
+      <div
+        class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
+        aria-hidden="true"
+      >
+        <div
+          class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]"
+          style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"
+        >
+        </div>
+      </div>
+    </div>
   </main>
 </Layout>
 
