--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,15 +2,109 @@
 
 ---
 
-<div class="container mx-auto flex justify-between items-center">
-  <a href="/" class="text-white text-lg font-bold">My Project</a>
-  <ul class="flex space-x-4">
-    <li><a href="/" class="text-gray-300 hover:text-white">Home</a></li>
-    <li>
-      <a href="/projects" class="text-gray-300 hover:text-white">Projects</a>
-    </li>
-    <li>
-      <a href="/fieldwork" class="text-gray-300 hover:text-white">About</a>
-    </li>
-  </ul>
+<nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
+  <div class="flex lg:flex-1">
+    <a href="#" class="-m-1.5 p-1.5">
+      <span class="sr-only">Heru Handika</span>
+      <img class="h-8 w-auto" src="/favicon.svg" alt="" />
+    </a>
+  </div>
+  <div class="flex lg:hidden">
+    <button
+      type="button"
+      class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
+    >
+      <span class="sr-only">Open main menu</span>
+      <svg
+        class="h-6 w-6"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        aria-hidden="true"
+        data-slot="icon"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
+      </svg>
+    </button>
+  </div>
+  <div class="hidden lg:flex lg:gap-x-12">
+    <a href="/" class="text-sm/6 font-semibold text-gray-900">About</a>
+    <a href="/projects" class="text-sm/6 font-semibold text-gray-900"
+      >Projects</a
+    >
+    <a href="/cv" class="text-sm/6 font-semibold text-gray-900">Publications</a>
+    <a href="/teaching" class="text-sm/6 font-semibold text-gray-900"
+      >Fieldwork</a
+    >
+    <a href="#" class="text-sm/6 font-semibold text-gray-900"
+      >Teaching & Outreach</a
+    >
+    <a href="#" class="text-sm/6 font-semibold text-gray-900">Software</a>
+  </div>
+</nav>
+<!-- Mobile menu, show/hide based on menu open state. -->
+<div class="lg:hidden" role="dialog" aria-modal="true">
+  <!-- Background backdrop, show/hide based on slide-over state. -->
+  <div class="fixed inset-0 z-50"></div>
+  <div
+    class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
+  >
+    <div class="flex items-center justify-between">
+      <a href="#" class="-m-1.5 p-1.5">
+        <span class="sr-only">Your Company</span>
+        <img
+          class="h-8 w-auto"
+          src="https://tailwindui.com/plus/img/logos/mark.svg?color=indigo&shade=600"
+          alt=""
+        />
+      </a>
+      <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
+        <span class="sr-only">Close menu</span>
+        <svg
+          class="h-6 w-6"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          aria-hidden="true"
+          data-slot="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M6 18 18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+    </div>
+    <div class="mt-6 flow-root">
+      <div class="-my-6 divide-y divide-gray-500/10">
+        <div class="space-y-2 py-6">
+          <a
+            href="/index"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            >About</a
+          >
+          <a
+            href="#"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            >Features</a
+          >
+          <a
+            href="#"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            >Marketplace</a
+          >
+          <a
+            href="#"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            >Company</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
