--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,7 @@
   <div class="flex lg:flex-1">
     <a href="#" class="-m-1.5 p-1.5">
       <span class="sr-only">Heru Handika</span>
-      <img class="h-8 w-auto" src="/favicon.svg" alt="" />
+      <img class="h-8 w-auto" src="/favicon.svg" alt="handika research logo" />
     </a>
   </div>
   <div class="flex lg:hidden">
@@ -40,10 +40,10 @@
     <a href="/teaching" class="text-sm/6 font-semibold text-gray-900"
       >Fieldwork</a
     >
-    <a href="#" class="text-sm/6 font-semibold text-gray-900"
-      >Teaching & Outreach</a
-    >
     <a href="#" class="text-sm/6 font-semibold text-gray-900">Software</a>
+    <a href="#" class="text-sm/6 font-semibold text-gray-900">Teaching</a>
+
+    <a href="#" class="text-sm/6 font-semibold text-gray-900">Outreach</a>
   </div>
 </nav>
 <!-- Mobile menu, show/hide based on menu open state. -->
@@ -55,11 +55,11 @@
   >
     <div class="flex items-center justify-between">
       <a href="#" class="-m-1.5 p-1.5">
-        <span class="sr-only">Your Company</span>
+        <span class="sr-only">Heru Handika</span>
         <img
           class="h-8 w-auto"
-          src="https://tailwindui.com/plus/img/logos/mark.svg?color=indigo&shade=600"
-          alt=""
+          src="/favicon.svg"
+          alt="handika research logo"
         />
       </a>
       <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
@@ -91,17 +91,32 @@
           <a
             href="#"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
-            >Features</a
+            >Projects</a
           >
           <a
             href="#"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
-            >Marketplace</a
+            >Publication</a
           >
           <a
             href="#"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
-            >Company</a
+            >Fieldwork</a
+          >
+          <a
+            href="#"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            >Software</a
+          >
+          <a
+            href="#"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            >Teaching</a
+          >
+          <a
+            href="#"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            >Outreach</a
           >
         </div>
       </div>
