Add a profile avatar.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -36,14 +36,22 @@
     <a href="/projects" class="text-sm/6 font-semibold text-gray-900"
       >Projects</a
     >
-    <a href="/cv" class="text-sm/6 font-semibold text-gray-900">Publications</a>
-    <a href="/teaching" class="text-sm/6 font-semibold text-gray-900"
+    <a href="/publications" class="text-sm/6 font-semibold text-gray-900"
+      >Publications</a
+    >
+    <a href="/fieldwork" class="text-sm/6 font-semibold text-gray-900"
       >Fieldwork</a
     >
-    <a href="#" class="text-sm/6 font-semibold text-gray-900">Software</a>
-    <a href="#" class="text-sm/6 font-semibold text-gray-900">Teaching</a>
+    <a href="/software" class="text-sm/6 font-semibold text-gray-900"
+      >Software</a
+    >
+    <a href="/teaching" class="text-sm/6 font-semibold text-gray-900"
+      >Teaching</a
+    >
 
-    <a href="#" class="text-sm/6 font-semibold text-gray-900">Outreach</a>
+    <a href="/outreach" class="text-sm/6 font-semibold text-gray-900"
+      >Outreach</a
+    >
   </div>
 </nav>
 <!-- Mobile menu, show/hide based on menu open state. -->
@@ -84,37 +92,37 @@
       <div class="-my-6 divide-y divide-gray-500/10">
         <div class="space-y-2 py-6">
           <a
-            href="/index"
+            href="/"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
             >About</a
           >
           <a
-            href="#"
+            href="/projects"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
             >Projects</a
           >
           <a
-            href="#"
+            href="/publications"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
             >Publication</a
           >
           <a
-            href="#"
+            href="/fieldwork"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
             >Fieldwork</a
           >
           <a
-            href="#"
+            href="/software"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
             >Software</a
           >
           <a
-            href="#"
+            href="/teaching"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
             >Teaching</a
           >
           <a
-            href="#"
+            href="/outreach"
             class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
             >Outreach</a
           >
