--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import profilePhoto from "../assets/img/profile.jpg";
             src={profilePhoto.src}
             alt="Handika's profile photo"
           />
-          <h1 class="font-serif text-5xl text-gray-800">
+          <h1 class="font-serif text-5xl text-gray-800 py-4">
             Hi, I'm <strong>Heru Handika</strong>
           </h1>
           <p
@@ -35,7 +35,6 @@ import profilePhoto from "../assets/img/profile.jpg";
             >
             to improve <strong>biodiversity research</strong>.
           </p>
-          <div class="mt-10 flex items-center justify-center gap-x-6"></div>
         </div>
       </div>
       <div
