--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,16 @@
   <div class="flex lg:flex-1">
     <a href="#" class="-m-1.5 p-1.5">
       <span class="sr-only">Heru Handika</span>
-      <img class="h-8 w-auto" src="/favicon.svg" alt="handika research logo" />
+      <img
+        class="h-8 w-auto block dark:hidden"
+        src="/favicon.svg"
+        alt="handika research logo"
+      />
+      <img
+        class="h-8 w-auto hidden dark:block"
+        src="/favicon-dark.svg"
+        alt="handika research logo"
+      />
     </a>
   </div>
   <div class="flex lg:hidden">
@@ -33,23 +42,35 @@
   </div>
   <div class="hidden lg:flex lg:gap-x-12">
     <a href="/" class="text-sm/6 font-semibold text-gray-900">About</a>
-    <a href="/projects" class="text-sm/6 font-semibold text-gray-900"
+    <a
+      href="/projects"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
       >Projects</a
     >
-    <a href="/publications" class="text-sm/6 font-semibold text-gray-900"
+    <a
+      href="/publications"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
       >Publications</a
     >
-    <a href="/fieldwork" class="text-sm/6 font-semibold text-gray-900"
+    <a
+      href="/fieldwork"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
       >Fieldwork</a
     >
-    <a href="/software" class="text-sm/6 font-semibold text-gray-900"
+    <a
+      href="/software"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
       >Software</a
     >
-    <a href="/teaching" class="text-sm/6 font-semibold text-gray-900"
+    <a
+      href="/teaching"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
       >Teaching</a
     >
 
-    <a href="/outreach" class="text-sm/6 font-semibold text-gray-900"
+    <a
+      href="/outreach"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
       >Outreach</a
     >
   </div>
