--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,16 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import profilePhoto from "../assets/img/profile.jpg";
+import github from "../assets/icons/github.svg";
+import gScholar from "../assets/icons/scholar.svg";
+import insta from "../assets/icons/instagram.svg";
 ---
 
 <Layout title="Island small mammals and inclusive biodiversity software">
   <main>
-    <div class="relative isolate px-6 pt-14 lg:px-8">
+    <div class="bg-white dark:bg-black relative isolate px-6 pt-14 lg:px-8">
       <div
-        class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
+        class="absolute inset-x-0 -top-32 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-32"
         aria-hidden="true"
       >
         <div
@@ -16,18 +19,18 @@ import profilePhoto from "../assets/img/profile.jpg";
         >
         </div>
       </div>
-      <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+      <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-32">
         <div class="text-center item-center">
           <img
             class="block mx-auto md:h-32 lg:h-48 rounded-full sm:mx-auto"
             src={profilePhoto.src}
             alt="Handika's profile photo"
           />
-          <h1 class="font-serif text-5xl text-gray-800 py-4">
+          <h1 class="font-serif text-5xl dark:text-white text-gray-800 py-4">
             Hi, I'm <strong>Heru Handika</strong>
           </h1>
           <p
-            class="mt-2 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8"
+            class="mt-2 text-pretty text-lg font-medium text-slate-500 dark:text-slate-400 sm:text-xl/8"
           >
             I study <strong>small mammal speciation</strong> on complex <strong
               >island systems</strong
@@ -35,6 +38,34 @@ import profilePhoto from "../assets/img/profile.jpg";
             >
             to improve <strong>biodiversity research</strong>.
           </p>
+          <div class="flex justify-center mt-4 space-x-4">
+            <a
+              href="https://github.com/hhandika"
+              target="_blank"
+              rel="noopener"
+            >
+              <img src={github.src} alt="GitHub logo" class="w-8" />
+            </a>
+            <a
+              href="https://scholar.google.com/citations?user=Jaub_M0AAAAJ&hl=en"
+              ><img
+                src={gScholar.src}
+                alt="Google Scholar logo"
+                class="w-8"
+              /></a
+            >
+            <a href="https://www.instagram.com/heru_hdka/"
+              ><img src={insta.src} alt="Instagram logo" class="w-8" /></a
+            >
+          </div>
+          <div class="grid grid-cols-4 gap-4 text-center mt-24">
+            <div class="bg-blue-400 p-4 rounded"><p>Fieldwork</p></div>
+            <div class="bg-blue-400 p-4 rounded">
+              <p>Specimen contribution</p>
+            </div>
+            <div class="bg-blue-400 p-4 rounded"><p>Code written</p></div>
+            <div class="bg-blue-400 p-4 rounded"><p>Top language</p></div>
+          </div>
         </div>
       </div>
       <div
@@ -50,58 +81,3 @@ import profilePhoto from "../assets/img/profile.jpg";
     </div>
   </main>
 </Layout>
-
-<style>
-  main {
-    margin: auto;
-    padding: 1rem;
-    width: 800px;
-    max-width: calc(100% - 2rem);
-    color: white;
-    font-size: 20px;
-    line-height: 1.6;
-  }
-  .astro-a {
-    position: absolute;
-    top: -32px;
-    left: 50%;
-    transform: translatex(-50%);
-    width: 220px;
-    height: auto;
-    z-index: -1;
-  }
-  .text-gradient {
-    background-image: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 400%;
-    background-position: 0%;
-  }
-  .instructions {
-    margin-bottom: 2rem;
-    border: 1px solid rgba(var(--accent-light), 10%);
-    background: linear-gradient(
-      rgba(173, 216, 230, 0.66),
-      rgba(173, 216, 230, 0.33)
-    );
-    padding: 1.5rem;
-    border-radius: 8px;
-  }
-  .instructions code {
-    font-size: 0.8em;
-    font-weight: bold;
-    background: rgba(var(--accent-light), 12%);
-    color: rgb(var(--accent-light));
-    border-radius: 4px;
-    padding: 0.3em 0.4em;
-  }
-  .instructions strong {
-    color: rgb(var(--accent-light));
-  }
-  .link-card-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-    gap: 2rem;
-    padding: 0;
-  }
-</style>
