--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -41,7 +41,9 @@
     </button>
   </div>
   <div class="hidden lg:flex lg:gap-x-12">
-    <a href="/" class="text-sm/6 font-semibold text-gray-900">About</a>
+    <a href="/" class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
+      >About</a
+    >
     <a
       href="/projects"
       class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
@@ -80,7 +82,7 @@
   <!-- Background backdrop, show/hide based on slide-over state. -->
   <div class="fixed inset-0 z-50"></div>
   <div
-    class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
+    class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
   >
     <div class="flex items-center justify-between">
       <a href="#" class="-m-1.5 p-1.5">
