--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,9 +21,11 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
-    <Header />
-    <slot />
+  <body class="bg-white dark:bg-black">
+    <div class="relative isolate px-6 pt-14 lg:px-8">
+      <Header />
+      <slot />
+    </div>
   </body>
 </html>
 <!-- <style is:global>
