--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -20,6 +20,7 @@
   </div>
   <div class="flex lg:hidden">
     <button
+      id="menu-button"
       type="button"
       class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
     >
@@ -78,11 +79,11 @@
   </div>
 </nav>
 <!-- Mobile menu, show/hide based on menu open state. -->
-<div class="lg:hidden" role="dialog" aria-modal="true">
+<div id="mobile-menu" class="lg:hidden hidden" role="dialog" aria-modal="true">
   <!-- Background backdrop, show/hide based on slide-over state. -->
-  <div class="fixed inset-0 z-50"></div>
+  <div class="fixed inset-0 z-50">
   <div
-    class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
+    class="fixed  bg-white inset-y-0 right-0 z-50 w-full overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
   >
     <div class="flex items-center justify-between">
       <a href="#" class="-m-1.5 p-1.5">
@@ -93,7 +94,7 @@
           alt="handika research logo"
         />
       </a>
-      <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
+      <button id="close-button" type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
         <span class="sr-only">Close menu</span>
         <svg
           class="h-6 w-6"
@@ -154,3 +155,21 @@
     </div>
   </div>
 </div>
+
+<script>
+  const menuButton = document.getElementById('menu-button');
+  const closeButton = document.getElementById('close-button');
+  const mobileMenu = document.getElementById('mobile-menu');
+
+  if (menuButton && mobileMenu) {
+    menuButton.addEventListener('click', function() {
+      mobileMenu.classList.toggle('hidden');
+    });
+  }
+
+  if (closeButton && mobileMenu) {
+    closeButton.addEventListener('click', function() {
+      mobileMenu.classList.toggle('hidden');
+    });
+  }
+</script>
