--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,10 +31,10 @@ import insta from "../assets/icons/instagram.svg";
         <p
           class="mt-2 text-pretty text-lg font-medium text-slate-500 dark:text-slate-400 sm:text-xl/8"
         >
-          I study <strong>small mammal speciation</strong> on complex <strong
+            I study <strong>small mammal speciation</strong> on complex <strong
             >island systems</strong
-          > and develop <strong>cross-platform, user-friendly software</strong>
-          to improve <strong>biodiversity research</strong>.
+            > and develop <strong>software</strong>
+            to foster integration, streamline data processing, and improve accessibility of <strong>biodiversity research</strong>.
         </p>
         <div class="flex justify-center mt-4 space-x-4">
           <a href="https://github.com/hhandika" target="_blank" rel="noopener">
