--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -42,38 +42,37 @@
     </button>
   </div>
   <div class="hidden lg:flex lg:gap-x-12">
-    <a href="/" class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
+    <a href="/" class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
       >About</a
     >
     <a
       href="/projects"
-      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
       >Projects</a
     >
     <a
       href="/publications"
-      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
       >Publications</a
     >
     <a
       href="/fieldwork"
-      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
       >Fieldwork</a
     >
     <a
       href="/software"
-      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
       >Software</a
     >
     <a
       href="/teaching"
-      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
       >Teaching</a
     >
-
     <a
       href="/outreach"
-      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
       >Outreach</a
     >
   </div>
@@ -83,7 +82,7 @@
   <!-- Background backdrop, show/hide based on slide-over state. -->
   <div class="fixed inset-0 z-50">
   <div
-    class="fixed  bg-white inset-y-0 right-0 z-50 w-full overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
+    class="fixed bg-white inset-y-0 right-0 z-50 w-full overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
   >
     <div class="flex items-center justify-between">
       <a href="#" class="-m-1.5 p-1.5">
@@ -117,37 +116,37 @@
         <div class="space-y-2 py-6">
           <a
             href="/"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
             >About</a
           >
           <a
             href="/projects"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
             >Projects</a
           >
           <a
             href="/publications"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
             >Publication</a
           >
           <a
             href="/fieldwork"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
             >Fieldwork</a
           >
           <a
             href="/software"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
             >Software</a
           >
           <a
             href="/teaching"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
             >Teaching</a
           >
           <a
             href="/outreach"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50"
+            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
             >Outreach</a
           >
         </div>
