--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,49 +18,69 @@ import insta from "../assets/icons/instagram.svg";
       >
       </div>
     </div>
-    <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-32">
+    <div class="mx-auto max-w-2xl py-8 sm:py-24 lg:py-32">
       <div class="text-center item-center">
         <img
-          class="block mx-auto md:h-32 lg:h-48 rounded-full sm:mx-auto"
+          class="block mx-auto h-32 lg:h-48 rounded-full sm:mx-auto"
           src={profilePhoto.src}
           alt="Handika's profile photo"
         />
         <h1 class="font-serif text-5xl dark:text-white text-gray-800 py-4">
-          Hi, I'm <strong>Heru Handika</strong>
+          Hi, I'm <strong class="text-gradient-to-r from-cyan-100 to-blue-100"
+            >Heru Handika</strong
+          >
         </h1>
         <p
           class="mt-2 text-pretty text-lg font-medium text-slate-500 dark:text-slate-400 sm:text-xl/8"
         >
-            I study <strong>small mammal speciation</strong> on complex <strong
-            >island systems</strong
-            > and develop <strong>software</strong>
-            to foster integration, streamline data processing, and improve accessibility of <strong>biodiversity research</strong>.
+          I study small mammal speciation on islands and develop software to
+          improve data integration and management, promote collaboration, and
+          increase the accessibility of biodiversity research
+        </p>.
+      </div>
+      <div
+        class="flex
+            justify-center
+            mt-4
+            space-x-4"
+      >
+        <a href="https://github.com/hhandika" target="_blank" rel="noopener">
+          <img src={github.src} alt="GitHub logo" class="w-8" />
+        </a>
+        <a
+          href="https://scholar.google.com/citations?user=Jaub_M0AAAAJ&hl=en"
+          target="_blank"
+          rel="noopener"
+          ><img src={gScholar.src} alt="Google Scholar logo" class="w-8" /></a
+        >
+        <a
+          href="https://www.instagram.com/heru_hdka/"
+          target="_blank"
+          rel="noopener"
+          ><img src={insta.src} alt="Instagram logo" class="w-8" /></a
+        >
+      </div>
+    </div>
+    <div
+      class="grid bg-gradient-to-r from-cyan-100 to-blue-100 lg:grid-cols-3 gap-4 text-center rounded-2xl lg:rounded-full mb-16 mx-40"
+    >
+      <div class="p-4 rounded">
+        <p class="text-slate-600">Fieldwork</p>
+        <p class="text-slate-500">
+          <strong class="font-bold text-orange-600 text-2xl">30+</strong> localities
         </p>
-        <div class="flex justify-center mt-4 space-x-4">
-          <a href="https://github.com/hhandika" target="_blank" rel="noopener">
-            <img src={github.src} alt="GitHub logo" class="w-8" />
-          </a>
-          <a
-            href="https://scholar.google.com/citations?user=Jaub_M0AAAAJ&hl=en"
-            target="_blank"
-            rel="noopener"
-            ><img src={gScholar.src} alt="Google Scholar logo" class="w-8" /></a
-          >
-          <a
-            href="https://www.instagram.com/heru_hdka/"
-            target="_blank"
-            rel="noopener"
-            ><img src={insta.src} alt="Instagram logo" class="w-8" /></a
-          >
-        </div>
-        <div class="grid grid-cols-4 gap-4 text-center mt-24">
-          <div class="bg-blue-400 p-4 rounded"><p>Fieldwork</p></div>
-          <div class="bg-blue-400 p-4 rounded">
-            <p>Specimen contribution</p>
-          </div>
-          <div class="bg-blue-400 p-4 rounded"><p>Code written</p></div>
-          <div class="bg-blue-400 p-4 rounded"><p>Top language</p></div>
-        </div>
+      </div>
+      <div class="p-4 rounded">
+        <p class="text-slate-600">Specimen contribution</p>
+        <p class="text-slate-500">
+          <strong class="font-bold text-orange-600 text-2xl">10k+</strong> vouchers
+        </p>
+      </div>
+      <div class="p-4 rounded">
+        <p class="text-slate-600">Code written</p>
+        <p class="text-slate-500">
+          <strong class="font-bold text-orange-600 text-2xl">150K+</strong> lines
+        </p>
       </div>
     </div>
   </main>
