--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,16 +26,14 @@ import insta from "../assets/icons/instagram.svg";
           alt="Handika's profile photo"
         />
         <h1 class="font-serif text-5xl dark:text-white text-gray-800 py-4">
-          Hi, I'm <strong class="text-gradient-to-r from-cyan-100 to-blue-100"
-            >Heru Handika</strong
-          >
+          Hi, I'm <strong>Heru Handika</strong>
         </h1>
         <p
           class="mt-2 text-pretty text-lg font-medium text-slate-500 dark:text-slate-400 sm:text-xl/8"
         >
-          I study small mammal speciation on islands and develop software to
-          improve data integration and management, promote collaboration, and
-          increase the accessibility of biodiversity research
+          I study small mammal diversity and speciation on islands and develop
+          software to improve data integration and management, promote
+          collaboration, and increase the accessibility of biodiversity research
         </p>.
       </div>
       <div
