--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,19 +1,38 @@
 ---
-import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
+import labIcon from "../assets/icons/microscope.svg";
 ---
 
 <Layout title="My Research Projects">
   <main>
     <div class="mx-auto max-w-2xl py-6 sm:py-16 lg:py-8">
       <div class="text-center">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            d="M12 2a1 1 0 011 1v1h1a1 1 0 110 2h-1v1h1a1 1 0 110 2h-1v1h1a1 1 0 110 2h-1v1h1a1 1 0 110 2h-1v1h1a1 1 0 110 2h-1v1a1 1 0 11-2 0v-1h-1a1 1 0 110-2h1v-1h-1a1 1 0 110-2h1v-1h-1a1 1 0 110-2h1v-1h-1a1 1 0 110-2h1V6h-1a1 1 0 110-2h1V3a1 1 0 011-1z"
+          ></path>
+        </svg>
         <h1
-          class="text-balance dark:text-white text-gray-900 text-5xl font-semibold tracking-tight py-4"
+          class="font-serif tracking-wide dark:text-white text-gray-900 text-5xl font-semibold tracking-tight py-4"
         >
           Research Projects
         </h1>
-        <h2 class="dark:text-slate-200 text-slate-900">
-          Small Mammal Diversity & Evolution
+      </div>
+      <div class="text-center mt-4 space-x-4">
+        <h2 class="font-bold text-slate-400">Key Projects</h2>
+        <p class="text-slate-400">
+          small mammal diversity &middot; speciation &middot; digital field
+          catalog &middot; cross-platform pipeline &middot; genomic tools
+        </p>
+      </div>
+      <div class="my-8 max-w-3xl">
+        <h2 class="text-2xl text-orange-400 text-slate-900">
+          Small Mammal Diversity & Speciation
         </h2>
         <h3 class="dark:text-slate-200 text-slate-800">
           Understanding patterns that generate species diversity within a
@@ -60,6 +79,7 @@ import Layout from "../layouts/Layout.astro";
           class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
           aria-hidden="true"
         >
+          <br class="" />
         </div>
       </div>
     </div>
