--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -42,7 +42,9 @@
     </button>
   </div>
   <div class="hidden lg:flex lg:gap-x-12">
-    <a href="/" class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
+    <a
+      href="/"
+      class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
       >About</a
     >
     <a
@@ -51,9 +53,9 @@
       >Projects</a
     >
     <a
-      href="/publications"
+      href="/cv"
       class="text-sm/6 font-semibold text-gray-900 dark:text-gray-100 hover:text-talamau-brown active:text-blue-700"
-      >Publications</a
+      >CV</a
     >
     <a
       href="/fieldwork"
@@ -81,94 +83,99 @@
 <div id="mobile-menu" class="lg:hidden hidden" role="dialog" aria-modal="true">
   <!-- Background backdrop, show/hide based on slide-over state. -->
   <div class="fixed inset-0 z-50">
-  <div
-    class="fixed bg-white inset-y-0 right-0 z-50 w-full overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
-  >
-    <div class="flex items-center justify-between">
-      <a href="#" class="-m-1.5 p-1.5">
-        <span class="sr-only">Heru Handika</span>
-        <img
-          class="h-8 w-auto"
-          src="/favicon.svg"
-          alt="handika research logo"
-        />
-      </a>
-      <button id="close-button" type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
-        <span class="sr-only">Close menu</span>
-        <svg
-          class="h-6 w-6"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          aria-hidden="true"
-          data-slot="icon"
+    <div
+      class="fixed bg-white inset-y-0 right-0 z-50 w-full overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
+    >
+      <div class="flex items-center justify-between">
+        <a href="#" class="-m-1.5 p-1.5">
+          <span class="sr-only">Heru Handika</span>
+          <img
+            class="h-8 w-auto"
+            src="/favicon.svg"
+            alt="handika research logo"
+          />
+        </a>
+        <button
+          id="close-button"
+          type="button"
+          class="-m-2.5 rounded-md p-2.5 text-gray-700"
         >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M6 18 18 6M6 6l12 12"></path>
-        </svg>
-      </button>
-    </div>
-    <div class="mt-6 flow-root">
-      <div class="-my-6 divide-y divide-gray-500/10">
-        <div class="space-y-2 py-6">
-          <a
-            href="/"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
-            >About</a
+          <span class="sr-only">Close menu</span>
+          <svg
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            aria-hidden="true"
+            data-slot="icon"
           >
-          <a
-            href="/projects"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
-            >Projects</a
-          >
-          <a
-            href="/publications"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
-            >Publication</a
-          >
-          <a
-            href="/fieldwork"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
-            >Fieldwork</a
-          >
-          <a
-            href="/software"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
-            >Software</a
-          >
-          <a
-            href="/teaching"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
-            >Teaching</a
-          >
-          <a
-            href="/outreach"
-            class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
-            >Outreach</a
-          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M6 18 18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </div>
+      <div class="mt-6 flow-root">
+        <div class="-my-6 divide-y divide-gray-500/10">
+          <div class="space-y-2 py-6">
+            <a
+              href="/"
+              class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
+              >About</a
+            >
+            <a
+              href="/projects"
+              class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
+              >Projects</a
+            >
+            <a
+              href="/cv"
+              class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
+              >CV</a
+            >
+            <a
+              href="/fieldwork"
+              class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
+              >Fieldwork</a
+            >
+            <a
+              href="/software"
+              class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
+              >Software</a
+            >
+            <a
+              href="/teaching"
+              class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
+              >Teaching</a
+            >
+            <a
+              href="/outreach"
+              class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50 hover:text-talamau-brown active:text-blue-700"
+              >Outreach</a
+            >
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+  <script>
+    const menuButton = document.getElementById("menu-button");
+    const closeButton = document.getElementById("close-button");
+    const mobileMenu = document.getElementById("mobile-menu");
+
+    if (menuButton && mobileMenu) {
+      menuButton.addEventListener("click", function () {
+        mobileMenu.classList.toggle("hidden");
+      });
+    }
+
+    if (closeButton && mobileMenu) {
+      closeButton.addEventListener("click", function () {
+        mobileMenu.classList.toggle("hidden");
+      });
+    }
+  </script>
 </div>
-
-<script>
-  const menuButton = document.getElementById('menu-button');
-  const closeButton = document.getElementById('close-button');
-  const mobileMenu = document.getElementById('mobile-menu');
-
-  if (menuButton && mobileMenu) {
-    menuButton.addEventListener('click', function() {
-      mobileMenu.classList.toggle('hidden');
-    });
-  }
-
-  if (closeButton && mobileMenu) {
-    closeButton.addEventListener('click', function() {
-      mobileMenu.classList.toggle('hidden');
-    });
-  }
-</script>
