--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Island small mammals and inclusive biodiversity software">
+<Layout title="Fieldwork">
   <main>
     <div class="mx-auto max-w-2xl py-6 sm:py-16 lg:py-8">
       <div class="text-center">
